hphp/test/zend/bad/ext/soap/tests/interop/Round3/GroupD/r3_groupD_emptysa_001w.php
<?php
$client = new SoapClient(dirname(__FILE__)."/round3_groupD_emptysa.wsdl",array("trace"=>1,"exceptions"=>0));
$client->echoString("Hello World");
echo $client->__getlastrequest();
$HTTP_RAW_POST_DATA = $client->__getlastrequest();
include("round3_groupD_emptysa.inc");
echo "ok\n";
?>